# ATTS_Complete_Free_Package

./: .gitignore  ATTS_Experiment_Guide.md  ATTS_Manual_Testing_Guide.md  Diagram_Prompts_for_ATTS.md  LAPTOP_SAFETY_GUIDE.md  LICENSE  README.md  README_FREE_OPTIONS.md  atts_experiment.py  atts_experiment_free.py  atts_experiment_local.py  convert_math_dataset.py  math_problems.json  pyproject.toml  requirements.txt  run_atts.py
config/: prompts.yaml  settings.yaml  thresholds.yaml
data/: math_problems.json
docs/: COMPREHENSIVE_COVERAGE.md  VALIDATION_SUMMARY.md
results/: example_results.json
src/atts/: __init__.py
src/atts/adapters/: __init__.py  json_repository.py  ollama_adapter.py  yaml_config_loader.py
src/atts/domain/: __init__.py  entities.py  exceptions.py  value_objects.py
src/atts/explainability/: __init__.py  analysis_reporter.py  decision_explainer.py  workflow_visualizer.py
src/atts/interfaces/: __init__.py  cli.py
src/atts/ports/: __init__.py  config_loader.py  model_caller.py  repository.py
src/atts/use_cases/: __init__.py  atts_workflow.py  dialectical_refinement.py  estimate_difficulty.py  solve_problem.py  verify_solution.py
tests/: __init__.py  test_domain.py
